force-app/main/default/objects/Damage__c/Damage__c.object-meta.xml
<CustomObject>
    <description>A car damage</description>
    <label>Damage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Damage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Damages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>