force-app/main/default/objects/Damage__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>Damages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>