force-app/main/default/objects/Damage__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>The damage description</description>
    <label>description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>