force-app/main/default/objects/Damage__c/fields/evaluation__c.field-meta.xml
<CustomField>
    <fullName>evaluation__c</fullName>
    <description>An evaluation of the damage: 0 = No damage; 100 = Worst damage</description>
    <label>Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>