force-app/main/default/objects/Damage__c/fields/part__c.field-meta.xml
<CustomField>
    <fullName>part__c</fullName>
    <description>The concerned part - where the damage is located</description>
    <label>Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>