force-app/main/default/objects/Damage__c/fields/picture__c.field-meta.xml
<CustomField>
    <fullName>picture__c</fullName>
    <description>The Base64 encoded damage related picture</description>
    <label>Picture</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>